[package]
name = "yfelo"
version = "0.1.1"
edition = "2021"
description = "the Yfelo template engine"
license = "MIT"

[dependencies]
clap = { version = "4.3.17", features = ["derive"] }
dyn_std = "0.3.1"
dyn_derive = "0.3.2"
once_cell = "1.19.0"
pest = "2.7.10"
pest_derive = "2.7.10"
pest_meta = "2.7.10"
pest_vm = "2.7.10"
serde = "1.0.203"
serde_json = "1.0.118"
yfelo_core = { version = "0.1.1", path = "../core" }
